plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.145'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        modSource project.sourceSets.main
        jvmArguments.addAll '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED'
    }
    client {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }
    server {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        programArgument '--nogui'
    }
    data {
        programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
    runtimeClasspath {
        exclude group: 'net.neoforged.fancymodloader'
    }
    configureEach {
        resolutionStrategy.force(
            'org.ow2.asm:asm:9.7',
            'org.ow2.asm:asm-analysis:9.7',
            'org.ow2.asm:asm-commons:9.7',
            'org.ow2.asm:asm-tree:9.7',
            'org.ow2.asm:asm-util:9.7'
        )
    }
}

dependencies {
    implementation("net.neoforged:neoforge:${neo_version}") {
        exclude group: 'net.neoforged.fancymodloader'
    }

    testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.1"
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.10.1"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.1"
    testImplementation "net.jqwik:jqwik:1.8.2"
}

shadowJar {
    configurations = [project.configurations.shadow]
    archiveBaseName = "${project.mod_id}"
    archiveClassifier = 'dev'
    archiveVersion = "${project.mod_version}"
}

test {
    useJUnitPlatform {
        includeEngines 'junit-jupiter', 'jqwik'
    }
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
        minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
        neo_version         : neo_version, neo_version_range: neo_version_range,
        loader_version_range: loader_version_range,
        mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
        mod_authors         : mod_authors, mod_description: mod_description,
        mod_url             : mod_url, mod_issues_url: mod_issues_url, mod_sources_url: mod_sources_url,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
